2009-02-04 TualatriX <tualatrix@gmail.com>

	* templatetags/comment.py: Make the Edit displayed for Admin only.

2009-01-31 TualatriX <tualatrix@gmail.com>

	* pulog/***: Rewrite the pagination, more powerful!

2009-01-28 TualatriX <tualatrix@gmail.com>

	* urls.py: Add the Favourite to Sitemap.

2009-01-27 TualatriX <tualatrix@gmail.com>

	* templates/base.html: Add the google-auth to base.html.
	* urls.py: Add the index.html to index view.

2009-01-23 TualatriX <tualatrix@gmail.com>

	* templatetags/media.py: Make the get_image_url return no thumb.
	* views/comment.py: Fixed the bug caused by non email. Prepare the
	cookie for comment.

2009-01-22 TualatriX <tualatrix@gmail.com>

	* templatetags/media.py: Make the get_media order_by('-date') and
	count to 10, the thumb to 640.

2009-01-16 TualatriX <tualatrix@gmail.com>

	* pulog/models.py: Set the Post and Favourite's comment_count to
	default 0.

2009-01-15 TualatriX <tualatrix@gmail.com>

	* pulog/views/tag.py: Separated the tag view form post.py, so in the
	future can do more thing.
	* pulog/models.py,templatetags/utils.py,
	templates/favourites/favourite_detail.html: Make the Comment common
	for object, and open the Comment for Favourite. Remove the
	enable_comment field.
	* pulog/templatetags/comment.py: Linebreak for Comment.content.

2009-01-14 TualatriX <tualatrix@gmail.com>

	* pulog/models.py, utls.py, views/favourites.py, templates/favourites:
	the previous version of Favourite.
	* pulog/models.py, managers.py: Fixed the bug caused the duplicated
	tag(for slug). Override the get_or_create of TagManager.

2009-01-13 TualatriX <tualatrix@gmail.com>

	* pulog/feed.py: Use the date__lte=datetime.datetime.now()

2009-01-11 TualatriX <tualatrix@gmail.com>

	* demo-site/static/img/favicon.ico, pulog/templates/base.html: Added
	the favicon.

2009-01-10 TualatriX <tualatrix@gmail.com>

	* pulog/templates/post/title.html
	pulog/templates/comment/comment.html: Use comment_count instead of
	get_comment_count.