@@ -14,7 +14,7 @@
             <p class="postmetadata">Posted in {% for category in post.get_categories %}{% if forloop.last %}<a href="{{ category.get_absolute_url }}">{{ category.name }}</a>{% else %}<a href="{{ category.get_absolute_url }}">{{ category.name }}</a>, {% endif %}{% endfor %} | {% if user.is_staff %} <a href="/admin/blog/post/{{ post.id }}/">Edit</a>{% endif %} | <a href="{{ post.get_absolute_url}}#comments">{{ post.get_comments|num }}个评论</a> </p>
         </div>
 		{% endfor %}
-	{% do_pagination %}
+	{% do_pagination_search %}
 	{% else %}
 		<div class="entry">
 			没有任何文档
