@@ -1,6 +1,7 @@
 2009-02-04 TualatriX <tualatrix@gmail.com>
 
 	* templatetags/comment.py: Make the Edit displayed for Admin only.
+	* views/utils.py: Improve the Search and Pagination for Search.
 
 2009-01-31 TualatriX <tualatrix@gmail.com>
 
